# twitter_bookmark_analytics

./: .gitignore  README.md  pyproject.toml
src/twitter_bookmark_analytics/: __init__.py  app.py
src/twitter_bookmark_analytics/data/: bookmarks.csv
src/twitter_bookmark_analytics/utils/: data_logger.py  visualizations.py
tests/: test_app.py  test_data_logger.py  test_visualizations.py
