[project]
name = "twitter_bookmark_analytics"
version = "0.1.0"
description = "Twitter bookmarks analysis with Streamlit"
authors = [
    { name = "divergen371", email = "51857554+divergen371@users.noreply.github.com" },
]
dependencies = [
    "streamlit>=1.32.0",
    "pandas>=2.2.1",
    "plotly>=5.19.0",
    "nltk>=3.8.1",
    "pandas-stubs>=2.2.3.241126",
    "tinysegmenter>=0.4",
    "mecab-python3>=1.0.10",
    "unidic-lite>=1.0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = ["ruff>=0.8.4", "pytest>=8.3.4", "mypy>=1.14.1"]

[tool.ruff]
fixable = ["ALL"]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

ignore = [
    "D1",    # undocumented
    "D203",  # one blank line before block
    "D213",  # multi-line summary second line
    "Q000",
    "TD001", # invalid todo tag
    "TD002", # missing todo author
    "TD003", # missing todo link
    "PD011", # pandas use of dot values
]

unfixable = [
    "F401", # unused import
    "F841", # unused variable
]


logger-objects = ["src.library.logger.LOGGER"]

select = ["ALL"]

line-length = 119

[tool.ruff.lint.pylint]
max-args = 6


[tool.ruff.flake8-quotes]
inline-quotes = "single"

[tool.ruff.isort]
force-single-line = true

[tool.ruff.per-file-ignores]
"./tests/*" = ["E101"]
"__init__.py" = ["E402"]
"**/{tests,docs,tools}/*" = ["E402"]

[tool.ruff.format]
quote-style = "double"
line-ending = "auto"

[tool.mypy]
python_version = "3.13"
show_error_context = true
show_column_numbers = true
no_implicit_optional = true
check_untyped_defs = true
warn_redundant_casts = true
allow_redefinition = true
allow_untyped_globals = false
color_output = true
disallow_incomplete_defs = true
disallow_subclassing_any = false
disallow_untyped_calls = false
disallow_untyped_decorators = false
disallow_untyped_defs = true
error_summary = true
ignore_missing_imports = true
implicit_reexport = true
namespace_packages = true
pretty = true
show_error_codes = true
show_traceback = true
strict = true
warn_no_return = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = false


[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/twitter_bookmark_analytics"]
